--- a/travel/okinawa2024.html
+++ b/travel/okinawa2024.html
@@ -33,7 +33,7 @@
 
   <body>
     <h1>6/21 ~ 6/27 日本沖繩自由行</h1>
-    <p style="font: icon; font-size: 15px; text-align: right;">2024/06/17 Last updated</p>
+    <p style="font: icon; font-size: 15px; text-align: right;">2024/06/20 Last updated</p>
     <hr>
     <p>
       複製google map日文小字地址到網站，查詢地圖碼&ensp;<a href="https://japanmapcode.com/zh-TW">JAPAN MAPCODE</a>
@@ -178,6 +178,67 @@
         <p>
             上午北邊城跡、古宇利島走走(蝦蝦飯)，晚上去永旺夢樂城逛街(代定)？記得阿嬤最愛的uniqlo
         </p>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>海風超市領水族館票</h3>
+          <table>
+            <tr><td>
+              從家裡開車1小時&ensp;<a href="https://maps.app.goo.gl/iRnkaogTS6qriWgB7">Google地圖</a>
+            </td></tr>
+            <tr><td>553 046 366*574</td></tr>
+            <tr><td>營業時間：09:00-21:00</td></tr>
+          </table>
+          <div class="indent">
+            <p>
+              紀念品商店
+            </p>
+          </div>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>古宇利蝦蝦飯</h3>
+          <table>
+            <tr><td>
+              開車30分鐘&ensp;<a href="https://maps.app.goo.gl/14xmCqXP98pw5NVy6">Google地圖</a>
+            </td></tr>
+            <tr><td>485 692 138*02</td></tr>
+            <tr><td>營業時間：11:00-18:00</td></tr>
+          </table>
+          <div class="indent">
+            <p>
+              應該是古宇利島最有名的餐廳，沒辦法先訂位。<br>
+              BTW 聽說充滿著台灣人～XD<br>
+              吃完可以去<a href="https://maps.app.goo.gl/5Kx8fSNEkbTEA4rE8">心形岩</a> 485 752 092*56<br>
+              或是<a href="https://maps.app.goo.gl/Uo8em81ev8iSBbyw8">海灘</a>看大橋玩水 485 662 831*22
+            </p>
+          </div>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>L LOTA餐廳</h3>
+          <table>
+            <tr><td>
+              <a href="https://maps.app.goo.gl/W3xMktX47qaQ7oMV7">Google地圖</a>
+            </td></tr>
+            <tr><td>485 692 291*27</td></tr>
+            <tr><td>營業時間：12:00-16:00</td></tr>
+          </table>
+          <div class="indent">
+            <p>
+              海景咖啡廳
+            </p>
+          </div>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>古宇利海洋塔</h3>
+          <table>
+            <tr><td>
+              <a href="https://maps.app.goo.gl/nJuuyXM1yqXpg2tD7">Google地圖</a>
+            </td></tr>
+            <tr><td>485 693 485*14</td></tr>
+            <tr><td>營業時間：10:00-18:00</td></tr>
+          </table>
+          <div class="indent">
+            <p>
+              可搭小車車看海，門票1000日圓<br>
+              可以去<a href="https://maps.app.goo.gl/5Kx8fSNEkbTEA4rE8">心形岩</a> 485 752 092*56<br>
+              或是<a href="https://maps.app.goo.gl/Uo8em81ev8iSBbyw8">海灘</a>看大橋玩水 485 662 831*22
+            </p>
+          </div>
       </section>
 
       <section><!--Day4-->
@@ -199,7 +260,8 @@
           <div class="indent">
             <p>
               海星＆海參觸摸池、鯨鯊餵食秀、水槽上方探險、觸摸鯊魚顎骨等<br>
-              海豚秀、海龜館、海牛館…多項免費設施
+              海豚秀、海龜館、海牛館…多項免費設施<br>
+              去水族館野餐或直接在水族館餐廳吃飯。
             </p>
           </div>
         <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
@@ -213,7 +275,49 @@
           </table>
           <div class="indent">
             <p>
-              注意事項？記得隱眼、拖鞋、防曬(海洋友善？)或是帶椰子油。
+              注意事項？記得隱眼、拖鞋、防曬(海洋友善？)或是帶椰子油。<br>
+              午餐自行解決(可找恩納市區餐廳)
+            </p>
+          </div>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>座喜味城</h3>
+          <table>
+            <tr><td>
+              <a href="https://maps.app.goo.gl/E25LR93hf4yK5dpn7">Google地圖</a>
+            </td></tr>
+            <tr><td>33 854 457*21</td></tr>
+          </table>
+          <div class="indent">
+            <p>
+              免費的遺跡喔
+            </p>
+          </div>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>琉球村</h3>
+          <table>
+            <tr><td>
+              <a href="https://maps.app.goo.gl/HVAFZyjCd9iEqVia8">Google地圖</a>
+            </td></tr>
+            <tr><td>206 033 037*14</td></tr>
+            <tr><td><a href="https://www.asoview.com/channel/tickets/5rEFP3d1CL/">賣票網站</a>價格比現場便宜</td></tr>
+          </table>
+          <div class="indent">
+            <p>
+              可體驗琉球傳統服飾，散佈在古宅之中，觀賞許多表演。<br>
+              不確定多少人要去。純逛可待1-2小
+            </p>
+          </div>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>殘波岬燈塔</h3>
+          <table>
+            <tr><td>
+              <a href="https://maps.app.goo.gl/UDjw3JtBhLgGTYko9">Google地圖</a>
+            </td></tr>
+            <tr><td>1005 685 416*05</td></tr>
+          </table>
+          <div class="indent">
+            <p>
+              可看日落
             </p>
           </div>
       </section>
