--- a/travel/okinawa2024.html
+++ b/travel/okinawa2024.html
@@ -52,10 +52,7 @@
         <div class="indent">
           <p>
             拿完行李辦好入境手續後，先行前往租車地點取車。
-            <ol>
-              <li>一車去超市(MaxValu)、一車買漢堡</li>
-              <li>一車去超市、一車checkin</li>
-            </ol>
+            <ul><li>一車去超市(MaxValu)、一車買漢堡+checkin</li></ul>
             p.s.記得買牛奶、優格等每天都想吃的東西！
           </p>
         </div>
@@ -81,18 +78,20 @@
         </div>
           <table>
             <tr><td>
-              地址待查&ensp;
+              <a href="https://maps.app.goo.gl/27FDntLGsXQPpo2NA">Google地圖</a>
             </td></tr>
-            <tr><td>地圖碼</td></tr>
+            <tr><td>206 032 720*55</td></tr>
           </table>
         <div class="indent">
           <p>
             退房時間：6/27(四)上午10點<br>
             外出要關好門窗，避免潮濕。<br>
-            若需要收垃圾請二姐告知房東，請房東來收。<br>
+            若需要收垃圾請二姐告知房東，請房東來收。(需做好垃圾分類)<br>
             若弄壞東西，馬上拍照並傳送訊息給房東。<br>
             提供洗浴用品、不提供牙刷牙膏。<br>
-            晚上9點後請保持安靜。
+            晚上9點後請保持安靜。<br>
+            wifi :elecom2g-0b762b<br>
+            pwd  :pjecicpmrm46
           </p>
         </div>
         <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
@@ -176,7 +175,7 @@
         <h2>Day3 6/23 (日)</h2>
         <hr>
         <p>
-            上午北邊城跡、古宇利島走走(蝦蝦飯)，晚上去永旺夢樂城逛街(代定)？記得阿嬤最愛的uniqlo
+            上午北邊城跡、古宇利島走走(蝦蝦飯)，晚上去最大AEON逛街，記得阿嬤最愛的uniqlo
         </p>
         <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
         <h3>海風超市領水族館票</h3>
@@ -234,9 +233,21 @@
           </table>
           <div class="indent">
             <p>
-              可搭小車車看海，門票1000日圓<br>
-              可以去<a href="https://maps.app.goo.gl/5Kx8fSNEkbTEA4rE8">心形岩</a> 485 752 092*56<br>
-              或是<a href="https://maps.app.goo.gl/Uo8em81ev8iSBbyw8">海灘</a>看大橋玩水 485 662 831*22
+              可搭小車車看海，門票1000日圓
+            </p>
+          </div>
+        <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+        <h3>永旺夢樂城 沖繩 來客夢</h3>
+          <table>
+            <tr><td>
+              從古宇利島出發1小時&ensp;<a href="https://maps.app.goo.gl/UB3akXeHYU939X5r9">Google地圖</a>
+            </td></tr>
+            <tr><td>33 530 174*76</td></tr>
+            <tr><td>營業時間：10:00-22:00</td></tr>
+          </table>
+          <div class="indent">
+            <p>
+              有大間UNIQLO~可在這裡吃晚餐(沒查)
             </p>
           </div>
       </section>
