--- a/bookmark.html
+++ b/bookmark.html
@@ -22,7 +22,7 @@
   <body style="font-family: Georgia, 'Times New Roman', Times, serif;">
     <h3 style="background-color:rgb(172, 185, 146); color:rgb(70, 78, 46); line-height: 1.5; padding-left: 10px;">Website Links</h3>
     <!--Date Update-->
-    <p style="font: icon; font-size: 10px;">2023/06/21 Last updated.</p>
+    <p style="font: icon; font-size: 10px;">2024/08/23 Last updated.</p>
     <p>記錄一些有用的、有趣的網站，供以後查閱。</p>
     <ul>3G/4G/5G Network share notes
       <li><a href="https://www.sharetechnote.com/Home.html">ShareTechnote</a></li>
@@ -30,7 +30,6 @@
     <ul>Web notes
       <li><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web">Web 入門</a></li>
       <li><a href="https://www.fooish.com/html/">HTML 語法教學</a></li>
-      <li><a href="https://www.daconote.com/css-%E8%AA%9E%E6%B3%95%E6%95%99%E5%AD%B8/">CSS 語法教學</a></li>
       <li><a href="https://fonts.google.com/">Google Fonts</a></li>
       <li><a href="https://colorhunt.co/">Color Hunt</a></li>
       <li><a href="https://nipponcolors.com/">Nippon colors</a></li>
@@ -42,7 +41,7 @@
       <li><a href="https://fate.windada.com/cgi-bin/fate">紫微斗數命盤</a></li>
       <li><a href="https://www.ximizi.net/bazi_shengchen_bazi.php">生辰五行</a></li>
     </ul>
-    <ul>旅遊
+    <ul>東京旅遊
       <li><a href="https://matcha-jp.com/tw/6208">河口湖觀光景點</a></li>
       <li><a href="https://www.funtime.com.tw/blog/funtime/fujisan">富士山攻略</a></li>
       <li><a href="https://mimihan.tw/mount-fuji/">富士山一日遊</a></li>
