--- a/en/index.html
+++ b/en/index.html
@@ -3,13 +3,14 @@
   <head>
     <title>Home | ChuTingI</title>
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
+    <link href="../styles/basic.css" rel="stylesheet">
     <style type="text/css"></style>
   </head>
 
-  <body style="background-color:rgb(233, 229, 214);">
+  <body>
     <h3 style="background-color: rgb(172, 185, 146); color: rgb(70, 78, 46);">Hey</h3>
     <!--Date Update-->
-    <p style="font: icon; font-size: 10px;">2023/05/05 Last updated.</p>
+    <p style="font: icon; font-size: 10px;">2024/08/23 Last updated.</p>
     <p>Hello, welcome to my personal website. Here is all about what I learned and what I love.</p>
     <p>Wish you enjoy this journey together.</p>
     <b>Ongoing maintenance and updating.</b>
