Add font in index.html

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <!-- link要在base前面，base才不會影響到link
     <base href="https://chutingi.github.io/" target="_self">-->
     <style type="text/css">
-      @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
       .bodyfont {
-        font-family: "Nunito", "文泉驛正黑", "WenQuanYi Zen Hei", "標楷體", PMingLiu, sans-serif;
+        font-family: "Nunito", "Noto Sans TC", "文泉驛正黑", "WenQuanYi Zen Hei", "標楷體", PMingLiu, sans-serif;
         font-optical-sizing: auto;
-        font-weight: 500;
+        font-weight: 400;
         font-style: normal;
       }
     </style>
@@ -34,7 +34,7 @@
   <body class="bodyfont">
     <h1 style="background-color: rgb(172, 185, 146); color: rgb(70, 78, 46);">Hey</h1><!-- line-height: 1.5; padding-left: 10px;-->
     <!--Date Update-->
-    <p style="font: icon; font-size: 10px;">2024/08/23 Last updated.</p>
+    <p style="font: icon; font-size: 10px;">2025/03/10 Last updated.</p>
     <p>嗨！這裡是我記錄學習和興趣的一方天地。<br>
         和我一起享受這趟旅程吧！</p>
     <p>持續維護與更新<br><strong>記得註解！</strong></p>
